<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewCarpetActivity">

        <TextView
            android:id="@+id/newCarpetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/register_margin_top"
            android:text="@string/newCarpet"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/carpetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newCarpetTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/carpetName"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/carpetName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/colorOfCarpet"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/color"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/carpetType"
            android:inputType="textShortMessage" />



        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_margin_top"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/width"
                android:layout_marginStart="@dimen/default_margin_side"

                />


            <EditText
                android:id="@+id/width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:inputType="number"


                android:layout_marginEnd="@dimen/default_margin_side"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/length"
                android:layout_marginStart="@dimen/default_margin_side"

                />

            <EditText
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:inputType="number"

                android:layout_marginEnd="@dimen/default_margin_side"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:layout_marginStart="@dimen/default_margin_side"
                />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:inputType="number"
                android:layout_marginEnd="@dimen/default_margin_side"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stock"
                android:layout_marginStart="@dimen/default_margin_side" />

            <EditText
                android:id="@+id/stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:inputType="number"

                android:layout_marginEnd="@dimen/default_margin_side"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/register_margin_top"
            android:orientation="horizontal">

            <Button
                style="@style/myButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="request"
                android:text="@string/request" />

            <Button
                style="@style/myButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:onClick="cancel"
                android:text="@string/cancel" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>